# ddd-web-app

./: Cargo.toml  README.md  compose.yaml
app/: Cargo.toml
app/src/: example.rs  lib.rs  main.rs  route.rs
app/src/example/: mod.rs  usecase.rs
app/src/example/presentation/: example.rs  user.rs
app/src/example/usecase/: interactor.rs
app/src/example/usecase/interactor/: create_user.rs  get_user.rs
app/tests/: main.rs
app/tests/example/: mod.rs  presentation.rs
app/tests/example/presentation/: example.rs  user.rs
app/tests/helper/: mod.rs
resources/database/: ddl.sql
share/: Cargo.toml
share/src/: lib.rs
share/src/common/: error.rs
share/src/example/domain/: mod.rs
share/src/example/infrastructure/database/: mod.rs
share/src/example/usecase/: mod.rs
shared/: Cargo.toml
shared/src/: common.rs  example.rs  lib.rs
shared/src/common/: error.rs  injector.rs  result.rs
shared/src/example/: usecase.rs
shared/src/example/domain/entity/: user.rs
shared/src/example/infrastructure/database/repository/: user_repository.rs
