[workspace]
members = [
    "app",
    "shared",
]
resolver = "2"

[workspace.dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.5", features = ["v4", "serde"] }