[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shared"

[dependencies]
actix-web = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = "1.0"
uuid = { workspace = true }